<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameActivity">


    <TextView
        android:id="@+id/txt_fieldTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_timer"
        android:textSize="@dimen/textSize_timer"
        android:paddingBottom="@dimen/paddingTopBottom_towardsWord"
        app:layout_constraintBottom_toTopOf="@id/txt_fieldWordCounter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_fieldWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_word"
        android:textSize="@dimen/textSize_word"
        app:layout_constraintBottom_toTopOf="@id/txt_fieldWordCounter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fieldTimer"
        />

    <TextView
        android:id="@+id/txt_fieldWordCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_word_counter"
        android:textSize="@dimen/textSize_word_Counter"
        android:paddingTop="@dimen/paddingTopBottom_towardsWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <Button
        android:id="@+id/btn_skipWord"
        android:layout_width="@dimen/fixedWidth_SkipCorrectButton"
        android:layout_height="@dimen/fixedHeight_SkipCorrectButton"
        android:text="@string/btn_skip_word"
        android:layout_marginRight="@dimen/marginRight_SkipButton"
        android:layout_marginEnd="@dimen/marginRight_SkipButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_correctWord"
        app:layout_constraintTop_toBottomOf="@id/txt_fieldWordCounter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"/>

    <Button
        android:id="@+id/btn_correctWord"
        android:layout_width="@dimen/fixedWidth_SkipCorrectButton"
        android:layout_height="@dimen/fixedHeight_SkipCorrectButton"
        android:text="@string/btn_correct"
        app:layout_constraintLeft_toRightOf="@id/btn_skipWord"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_skipWord" />
</androidx.constraintlayout.widget.ConstraintLayout>