<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextRoundActivity">

    <TextView
        android:id="@+id/text_correctGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_guesses"
        android:textSize="@dimen/textSize_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/text_skippedWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skipped_words"
        android:textSize="@dimen/marginRightLeft_radio_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btn_nextRound"
        android:layout_width="@dimen/fixedWidth_nextRound_quitButton"
        android:layout_height="wrap_content"
        android:text="@string/next_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <Button
        android:id="@+id/btn_Quit"
        android:layout_width="@dimen/fixedWidth_nextRound_quitButton"
        android:layout_height="wrap_content"
        android:text="@string/btn_quit"
        app:layout_constraintTop_toBottomOf="@id/btn_nextRound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.184" />

</androidx.constraintlayout.widget.ConstraintLayout>