...
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_300sdp"
        app:srcCompat="@drawable/splash_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_startGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_startGame"
...

    <Button
        android:id="@+id/btn_customWords"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_words"
        app:layout_constraintTop_toBottomOf="@id/btn_multiplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_multiplayer"
...
