...
        android:layout_height="wrap_content"
        android:text="@string/lbl_connected_user"
        android:layout_marginLeft="@dimen/marginStart_lbl_CW_list"
        android:layout_marginRight="@dimen/marginStart_lbl_CW_list"
        android:textSize="@dimen/textSize_lbl_CW_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lst_joined_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ListView
        android:id="@+id/lst_joined_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginLeft="@dimen/marginStart_lbl_CW_list"
        android:layout_marginRight="@dimen/marginStart_lbl_CW_list"
        app:layout_constraintBottom_toTopOf="@id/btn_ready"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_username"
        android:visibility="visible"
        />

...
